--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h1 {
   h1,
   #msg,
   #new-btn {
-    font-family: pristina, Verdana, sans-serif;
+    font-family: pristina, cursive, sans-serif;
     font-display: swap;
   }
 }
