--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1 {
-  font-family: pristina, Verdana, sans-serif;
+  font-family: pristina, cursive, sans-serif;
   color: black;
   font-size: 4rem;
 }
@@ -47,7 +47,7 @@ h1 {
 #reset-btn {
   padding: 1rem;
   font-size: 1.5rem;
-  font-family: pristina, Verdana, sans-serif;
+  font-family: pristina, cursive, sans-serif;
   background-color: #001427;
   color: #fff;
   border-radius: 1rem;
@@ -57,7 +57,7 @@ h1 {
 #new-btn {
   padding: 1rem;
   font-size: 1.5rem;
-  font-family: pristina, Verdana, sans-serif;
+  font-family: pristina, cursive, sans-serif;
 
   background-color: #001427;
   color: #fff;
@@ -67,7 +67,7 @@ h1 {
 
 #msg {
   color: #ffffff;
-  font-family: pristina, Verdana, sans-serif;
+  font-family: pristina, cursive, sans-serif;
   font-size: 5vmin;
 }
 
